flyttat rutan till höger

--- a/design/design/Views/Home/FragorOchSvar.cshtml
+++ b/design/design/Views/Home/FragorOchSvar.cshtml
@@ -8,10 +8,9 @@
 <div class="maincontainer1">
     <br />
     <br />
-   <div class=" maincontainer" style=" margin-left: 40px; margin-right: 40px;">
+   <div class="maincontainer" style="margin-left: 40px; margin-right: 40px;">
        
-        <div class="row">
-            <div class="col-lg-12">
+              
                 <div class="row">
             <div class="col-sm-3">
                 <div id="imaginary_container">
@@ -29,6 +28,7 @@
 
         <br />
         <br />
+       <div class="row">
        <legend style="color:#e93523">För våra hyresgäster</legend>
         <div class="panel-group col-md-6" id="accordion">
             <div class="panel panel-default">
@@ -408,52 +408,57 @@
                     </div>
                 </div>
             </div>
-        </div>
+            </div>
+           <div class="col-md-3 rightdiv information">
+               <p style="font-size:large;"><b>Här hittar du de vanligaste frågorna.</b></p>
+               <h4>
+                   <br />Hittar du inte svar på din fråga är du
+                   <br />välkomen att kontakta oss via e-post.
+                   <br />
+                   <br />Kontaktuppgifter till oss hittar ni <a class="link" href="~/Home/Kontakt">här</a>.
+                   <br />
+               </h4>
+           </div>
+           <div class="row">
+               
+        
        <legend style="color:#e93523">För kommande hyresgäster</legend>
 
-       <div class="panel-group fragor" id="accordion" style="max-width:520px;">
+               <div class="panel-group col-md-6" id="accordion">
 
-           <div class="panel panel-default">
-               <div class="panel-heading">
-                   <h4 class="panel-title">
-                       <a data-toggle="collapse" data-parent="#accordion" href="#collapse24">Bostadskön</a>
-                   </h4>
-               </div>
-               <div id="collapse24" class="panel-collapse collapse">
-                   <div class="panel-body">
-                       texttexthökn ljkl
+                   <div class="panel panel-default">
+                       <div class="panel-heading">
+                           <h4 class="panel-title">
+                               <a data-toggle="collapse" data-parent="#accordion" href="#collapse24">Bostadskön</a>
+                           </h4>
+                       </div>
+                       <div id="collapse24" class="panel-collapse collapse">
+                           <div class="panel-body">
+                               texttexthökn ljkl
+                           </div>
+                       </div>
                    </div>
-               </div>
-           </div>
-           <div class="panel panel-default">
-               <div class="panel-heading">
-                   <h4 class="panel-title">
-                       <a data-toggle="collapse" data-parent="#accordion" href="#collapse25">Intresseanmälan</a>
-                   </h4>
-               </div>
-               <div id="collapse25" class="panel-collapse collapse">
-                   <div class="panel-body">
-                       Vattnet i vattenlåsen avdunstar och då uppstår en obehaglig avloppslukt. Be en
-                       granne eller vän att spola i handfat, badkar och wc när du är borta en längre tid, så
-                       slipper du problemet.
+                   <div class="panel panel-default">
+                       <div class="panel-heading">
+                           <h4 class="panel-title">
+                               <a data-toggle="collapse" data-parent="#accordion" href="#collapse25">Intresseanmälan</a>
+                           </h4>
+                       </div>
+                       <div id="collapse25" class="panel-collapse collapse">
+                           <div class="panel-body">
+                               Vattnet i vattenlåsen avdunstar och då uppstår en obehaglig avloppslukt. Be en
+                               granne eller vän att spola i handfat, badkar och wc när du är borta en längre tid, så
+                               slipper du problemet.
+                           </div>
+                       </div>
                    </div>
+
                </div>
-           </div>
-           
-       </div>
-       <div class="col-md-3 rightdiv information">
-           <p style="font-size:large;"><b>Här hittar du de vanligaste frågorna.</b></p>
-           <h4>
-               <br />Hittar du inte svar på din fråga är du 
-               <br />välkomen att kontakta oss via e-post. 
-               <br />
-               <br />Kontaktuppgifter till oss hittar ni <a class="link" href="~/Home/Kontakt">här</a>.
-               <br />
-           </h4>
+       
+          
        </div>
     </div>
 </div>
-       </div>
     </div>
     
 
