fixat på startsidan

--- a/design/design/Views/Home/Index.cshtml
+++ b/design/design/Views/Home/Index.cshtml
@@ -24,7 +24,7 @@
         <div class="col-md-6" style="margin-left:30px;">
           
             <div class="mainbody">
-                <h2 style="text-align: center; color: #e93523">För folk som tycker om att bo!</h2>
+                <h2 style="text-align:center; color: #e93523">För folk som tycker om att bo!</h2>
                 <div id="myCarousel1" class="carousel slide" data-interval="false">
                     <!-- Indicators -->
                     <ol class="carousel-indicators">
@@ -64,7 +64,7 @@
                     </a>
                 </div>
             </div>
-            <a class="link" href="~/Home/Varafastigheter" style="margin-left:5%;">Våra fastigheter >></a>
+            <a class="link" href="~/Home/Varafastigheter">Våra fastigheter >></a>
 
 
         </div>
@@ -90,39 +90,47 @@
     <br />
     <br />
     <hr />
-    <div class=" row">
-        <div class=" rubrik" style="margin-left: 55px; ">
-            <h3>Senaste nytt</h3>
-        </div>
-        <br />
-        <div class=" col-md-7">
-            <div class="nyhet " style="text-align: center; margin-left: 5%; max-width: 750px">
-                <h2>Glad påsk!</h2>
-                <p style="text-align:left;">
-                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-
-                    <br />
-                    <br />Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-                    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-                </p>
-                <p style="text-align:right;">2017-04-12</p>
+    
+        <div class=" row" style="margin-left:5%; margin-right:5%;">
+            <div class=" rubrik" style="margin-left: 55px; ">
+                
             </div>
-            <a class="link" href="~/Home/Nyheter" style="margin-left:5%;">Se fler nyheter >></a>
-        </div>
-        <div class="col-md-4 facebook">
-            <h3 style="text-align: center; color: white;">Gilla oss på Facebook.</h3>
             <br />
-            <div class="fb-page" data-height="350" data-href="https://www.facebook.com/John-Ekstr%C3%B6ms-Bygg-AB-1430670663830254/" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false"><blockquote cite="https://www.facebook.com/John-Ekstr%C3%B6ms-Bygg-AB-1430670663830254/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/John-Ekstr%C3%B6ms-Bygg-AB-1430670663830254/">John Ekströms Bygg AB</a></blockquote></div>
+            <div class=" col-md-9" style="margin-left: 12%;">
+                <h2>Senaste nytt</h2>
+                <div class="nyhet " style="text-align: center; margin: auto;">
+                    <h2>Glad påsk!</h2>
+                    <p style="text-align:left;">
+                        Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                        Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                        Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                        Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                        Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                        Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                        Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+
+                        <br />
+                        <br />Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                        Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                    </p>
+                    <p style="text-align:right;">2017-04-12</p>
+                </div>
+                <a class="link" href="~/Home/Nyheter">Se fler nyheter >></a>
+            </div>
+
+
         </div>
-        
-    </div>
-            
+  
+    <br />
+    <br />
+    <hr />
+    <br />
+    <br />
+    <div class="col-md-4 facebook" style="float:none; margin:auto;">
+        <h3 style="text-align: center; color: white;">Gilla oss på Facebook.</h3>
+        <br />
+        <div class="fb-page" data-height="350" data-href="https://www.facebook.com/John-Ekstr%C3%B6ms-Bygg-AB-1430670663830254/" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false"><blockquote cite="https://www.facebook.com/John-Ekstr%C3%B6ms-Bygg-AB-1430670663830254/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/John-Ekstr%C3%B6ms-Bygg-AB-1430670663830254/">John Ekströms Bygg AB</a></blockquote></div>
+    </div>   
 
     </div>
  
