--- a/design/design/Views/Home/omoss.cshtml
+++ b/design/design/Views/Home/omoss.cshtml
@@ -7,46 +7,43 @@
     <h2 class ="sidrubrik">Om oss</h2>
 </center>
     <div class="maincontainer1">
-        <br />
-        <br />
-        <div class="col-lg-7" style="padding-right: 40px; border-right: 2px solid #cacaca; margin-left:30px;"> 
-           
-            <center>
-            <img class="img-responsive" src="~/Content/Images/omossbild.jpg" alt="">
-            </center>
-          
+    
+
+    <div class="row">
+        <div class="col-md-2">
+        </div>
+
+        <div class="col-md-8">
+            Byggmästaren John Ekström startade 1940 företaget John Ekströms byggnadsfirma. Nyckelordet i vår verksamhet är detsamma idag som det var för drygt 70 år sedan. Ordet är byggmästarkvalitét. En utgångspunkt som vi kommer hålla fast vid även i framtiden. Ekströms hus spänner över ett sekel av byggnader. Tack vare det kan vi erbjuda en rad olika typer av boendemiljöer. Vi har ca 900 hyreslägenheter i 60-talet innerstadsfastigheter. Vi här alltid noga med att sätta våra hyrsergäster i centrum. Därför strävar vi ständigt efter att skapa en trevlig och väl fungerande boendemiljö. Vi vill att våra hyresgäster ska känna trygghet, omtanke och trivsel.
+   
         </div>
         
-      <br />
-
         <div class="row">
-        <div class="col-sm-4 omoss">
-            <h3>Vår vision</h3>
-            <p>Lorem ipsum dolor..</p>
-           
-
-          
-        </div>
-        <div class="col-sm-4 omoss">
-            <h3>Företagets nyckelord</h3>
-            <p>Byggmästarkvalitét</p>
-             
+            <br />
+            <br />
+            <br />
             
-        </div>
-
-            <div class="col-sm-4 omoss">
-                <h3>Våra partners</h3>
-                <p>Wärna Städ och GMS i Örebro AB</p>
-
-
-
+            <div class="col-md-3">
+                <h3 style="color: #e93523">Vår vision</h3>
+                
+                <p>Lorem ipsum dolor..</p>
             </div>
-        <div class="col-sm-4 omoss">
-            <h3>EP-Fastigheter</h3>
-            <p>äger och förvaltar fastigheter i Örebro / Brickebacken. För intresseanmälan och mer information</p>
-            
-            <a href="http://www.epfastigheter.se/" target="_blank">Läs mer på EP-fastigeheters egen hemsida</a>
+            <div class="col-md-3">
+                <h3 style="color: #e93523">Företagets nyckelord</h3>
+                <p>Byggmästarkvalitét</p>
+            </div>
+            <div class="col-md-3">
+                <h3 style="color: #e93523">Våra partners</h3>
+                <p>Wärna Städ och GMS i Örebro AB</p>
+            </div>
+            <div class="col-md-3">
+                <h3 style="color: #e93523">EP-Fastigheter</h3>
+                <p>äger och förvaltar fastigheter i Örebro / Brickebacken. För intresseanmälan och mer information</p>
+
+                <a href="http://www.epfastigheter.se/" target="_blank">Läs mer på EP-fastigeheters egen hemsida</a>
+            </div>
+
+        </div>       
         </div>
-    </div>
-</div>
+        </div>
 
