--- a/design/design/Content/bootstrap.css
+++ b/design/design/Content/bootstrap.css
@@ -7001,7 +7001,7 @@ div.divfastigheter{
     box-shadow: 0px 2px 4px #333;
     border-radius: 10px;
     
-    background-color: #f8f8f8
+    background-color: white;
 }
 
 div.divfastigheter2{
