--- a/design/design/Views/Home/Varafastigheter.cshtml
+++ b/design/design/Views/Home/Varafastigheter.cshtml
@@ -133,8 +133,9 @@
             </div>
             <div class=" col-md-3 divfastigheter">
                 <div>
-                    <p><b>Läs mer om våra fastigheter</b></p>
-                    <a class="link" href="~/Home/studentboende" style="text-align:left">Studentboende</a><br /><br />
+                    <p><b style="background-color:white;">Läs mer om våra fastigheter</b></p>
+                    <a class="link" href="~/Home/studentboende" style="text-align:left; background-color:white;">Studentboende</a><br /><br />
+                  
                     <a class="link" href="~/Home/seriorboende" style="text-align:left">Seniorboende 55+</a><br />
                 </div>
             </div>
