--- a/design/design/Views/Home/omoss.cshtml
+++ b/design/design/Views/Home/omoss.cshtml
@@ -7,43 +7,51 @@
     <h2 class ="sidrubrik">Om oss</h2>
 </center>
     <div class="maincontainer1">
-    
+        <div class="maincontainer">
 
-    <div class="row">
-        <div class="col-md-2">
-        </div>
+            <div class="row">
+               
+                        <div class="row">
+                            <div class="col-md-2">
+                            </div>
 
-        <div class="col-md-8">
-            Byggmästaren John Ekström startade 1940 företaget John Ekströms byggnadsfirma. Nyckelordet i vår verksamhet är detsamma idag som det var för drygt 70 år sedan. Ordet är byggmästarkvalitét. En utgångspunkt som vi kommer hålla fast vid även i framtiden. Ekströms hus spänner över ett sekel av byggnader. Tack vare det kan vi erbjuda en rad olika typer av boendemiljöer. Vi har ca 900 hyreslägenheter i 60-talet innerstadsfastigheter. Vi här alltid noga med att sätta våra hyrsergäster i centrum. Därför strävar vi ständigt efter att skapa en trevlig och väl fungerande boendemiljö. Vi vill att våra hyresgäster ska känna trygghet, omtanke och trivsel.
-   
-        </div>
-        
-        <div class="row">
-            <br />
-            <br />
-            <br />
-            
-            <div class="col-md-3">
-                <h3 style="color: #e93523">Vår vision</h3>
+                            <div class="col-md-8"><center>
+                                Byggmästaren John Ekström startade 1940 företaget John Ekströms byggnadsfirma. Nyckelordet i vår verksamhet är detsamma idag som det var för drygt 70 år sedan. Ordet är byggmästarkvalitét. En utgångspunkt som vi kommer hålla fast vid även i framtiden. Ekströms hus spänner över ett sekel av byggnader. Tack vare det kan vi erbjuda en rad olika typer av boendemiljöer. Vi har ca 900 hyreslägenheter i 60-talet innerstadsfastigheter. Vi här alltid noga med att sätta våra hyrsergäster i centrum. Därför strävar vi ständigt efter att skapa en trevlig och väl fungerande boendemiljö. Vi vill att våra hyresgäster ska känna trygghet, omtanke och trivsel.
+                                <br />
+                                <br />
+                                <br />
+                                <br /></center>
+                            </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-md-12">
+                                <div class="col-sm-3 omoss">
+                                    <h4 style="color: #e93523">Vår vision</h4>
+
+                                    <p>Lorem ipsum dolor..</p>
+                                </div>
+                                <div class="col-sm-3 omoss">
+                                    <h4 style="color: #e93523">Företagets nyckelord</h4>
+                                    <p>Byggmästarkvalitét</p>
+                                </div>
+                                <div class="col-sm-3 omoss">
+                                    <h4 style="color: #e93523">Våra partners</h4>
+                                    <p>Wärna Städ och GMS i Örebro AB</p>
+                                </div>
+                                <div class="col-sm-3 omoss">
+                                    <h4 style="color: #e93523">EP-Fastigheter</h4>
+                                    <p>äger och förvaltar fastigheter i Örebro / Brickebacken. För intresseanmälan och mer information</p>
+
+                                    <a href="http://www.epfastigheter.se/" target="_blank">Läs mer på EP-fastigeheters egen hemsida</a>
+                                </div>
+
+                            </div>
+                        </div>
+                </div>
+                    </div>
                 
-                <p>Lorem ipsum dolor..</p>
-            </div>
-            <div class="col-md-3">
-                <h3 style="color: #e93523">Företagets nyckelord</h3>
-                <p>Byggmästarkvalitét</p>
-            </div>
-            <div class="col-md-3">
-                <h3 style="color: #e93523">Våra partners</h3>
-                <p>Wärna Städ och GMS i Örebro AB</p>
-            </div>
-            <div class="col-md-3">
-                <h3 style="color: #e93523">EP-Fastigheter</h3>
-                <p>äger och förvaltar fastigheter i Örebro / Brickebacken. För intresseanmälan och mer information</p>
-
-                <a href="http://www.epfastigheter.se/" target="_blank">Läs mer på EP-fastigeheters egen hemsida</a>
-            </div>
-
-        </div>       
         </div>
-        </div>
+         
+        
 
