--- a/design/design/Views/Home/Intresseanmalan.cshtml
+++ b/design/design/Views/Home/Intresseanmalan.cshtml
@@ -28,7 +28,7 @@
                 </div>
                 
                 <div class="falt">
-                    <label>Antal barn: </label>
+                    <label>Antal barn: *</label>
                     <div class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
                         <input name="deltagareinput" placeholder="Antal barn" class="form-control input-md" type="number">
@@ -52,7 +52,7 @@
                 </div>
 
                 <div class="falt">
-                    <label>Postort:</label>
+                    <label>Postort: *</label>
                     <div class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
                         <input name="state" placeholder="Postort" class="form-control" type="text">
@@ -68,7 +68,7 @@
                 </div>
                
                 <div class="falt">
-                    <label>Alternativt telefonnummer:</label>
+                    <label>Alternativt telefonnummer: *</label>
                     <div class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span>
                         <input name="state" placeholder="Telefonnummer" class="form-control" type="text">
@@ -76,18 +76,18 @@
                 </div>
                 
                 <div class="falt">
-                    <label>E-postadress:</label>
+                    <label>E-postadress: *</label>
                     <div class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
                         <input name="state" placeholder="E-postdress" class="form-control" type="text">
                     </div>
                 </div>
-                
+
                 <div class="falt">
-                    <label>Yrke: *</label>
+                    <label>Yrke/Arbetsgivare: * <i class="glyphicon glyphicon-question-sign"></i></label>
                     <div class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-briefcase"></i></span>
-                        <input name="state" placeholder="Yrke" class="form-control" type="text">
+                        <input name="state" placeholder="Yrke/Arbetsgivare" class="form-control" type="text">
                     </div>
                 </div>
          
@@ -98,22 +98,14 @@
                         <input name="state" placeholder="Årsinkomst" class="form-control" type="text">
                     </div>
                 </div>
-              
-                <div class="falt">
-                    <label>Arbetsgivare: *</label>
-                    <div class="input-group">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-briefcase"></i></span>
-                        <input name="state" placeholder="Arbetsgivare" class="form-control" type="text">
-                    </div>
-                </div>
 
-                <label>Jag söker: </label>
+                <label>Jag söker: *</label>
                 <div class="col-md-12 checkbox1">
 
 
                     <div class="btn-group">
                         <button data-toggle="dropdown" class="btn btn-default dropdown-toggle" data-placeholder="false">
-                            typ av boende/objekt
+                            boende/objekt
                             <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu drop">
@@ -145,7 +137,8 @@
                             <li><input type="checkbox" id="ID" name="Örebro Centralt" value="Örebro Centralt"><label for="ID"> Örebro Centralt</label>
                             <li><input type="checkbox" id="ID" name="Örebro Väster" value="Örebro Väster"><label for="ID"> Örebro Väster</label>
                             <li><input type="checkbox" id="ID" name="Örebro Öster" value="Örebro Öster"><label for="ID"> Örebro Öster</label>
-                        </ul>
+                            <li><input type="checkbox" id="ID" name="Örebro Söder" value="Örebro Söder"><label for="ID"> Örebro Söder</label>
+</ul>
                     </div>
                 </div>
                 <br />
@@ -201,7 +194,7 @@
                     <label>Egna ord:</label>
                     <div class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
-                        <textarea class="form-control" name="comment" placeholder="Meddelande"></textarea>
+                        <textarea class="form-control" name="comment" placeholder="Max 500 tecken"></textarea>
                     </div>
                 </div>
                <br />
@@ -231,7 +224,7 @@
                     </div>
                    
                     <div class="falt">
-                        <label>Antal barn: </label>
+                        <label>Antal barn: *</label>
                         <div class="input-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
                             <input name="deltagareinput" placeholder="Antal barn" class="form-control input-md" type="number">
@@ -255,7 +248,7 @@
                     </div>  
                                     
                     <div class="falt">
-                        <label>Postort:</label>
+                        <label>Postort: *</label>
                         <div class="input-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
                             <input name="state" placeholder="Postort" class="form-control" type="text">
@@ -271,7 +264,7 @@
                     </div>
                 
                     <div class="falt">
-                        <label>Alternativt telefonnummer:</label>
+                        <label>Alternativt telefonnummer: *</label>
                         <div class="input-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span>
                             <input name="state" placeholder="Telefonnummer" class="form-control" type="text">
@@ -279,7 +272,7 @@
                     </div>
                   
                     <div class="falt">
-                        <label>E-postadress:</label>
+                        <label>E-postadress: *</label>
                         <div class="input-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
                             <input name="state" placeholder="E-postdress" class="form-control" type="text">
@@ -287,10 +280,10 @@
                     </div>
                   
                     <div class="falt">
-                        <label>Yrke: *</label>
+                        <label>Yrke/Arbetsgivare: * <i class="glyphicon glyphicon-question-sign"></i></label>
                         <div class="input-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-briefcase"></i></span>
-                            <input name="state" placeholder="Yrke" class="form-control" type="text">
+                            <input name="state" placeholder="Yrke/Arbetsgivare" class="form-control" type="text">
                         </div>
                     </div>
 
@@ -301,14 +294,7 @@
                             <input name="state" placeholder="Årsinkomst" class="form-control" type="text">
                         </div>
                     </div>
-            
-                    <div class="falt">
-                        <label>Arbetsgivare: *</label>
-                        <div class="input-group">
-                            <span class="input-group-addon"><i class="glyphicon glyphicon-briefcase"></i></span>
-                            <input name="state" placeholder="Arbetsgivare" class="form-control" type="text">
-                        </div>
-                    </div>
+          
                 </div>
 
                 <br />
