--- a/design/design/Views/Home/Varafastigheter.cshtml
+++ b/design/design/Views/Home/Varafastigheter.cshtml
@@ -131,13 +131,17 @@
                     </div>
                 </div>
             </div>
-            <div class=" col-md-3 divfastigheter">
-                <div>
+            <div class=" col-md-4 divfastigheter">
+                
                     <p><b style="background-color:white;">Läs mer om våra fastigheter</b></p>
-                    <a class="link" href="~/Home/studentboende" style="text-align:left; background-color:white;">Studentboende</a><br /><br />
                   
+                    <div class="link1">
+                        <a class="link" href="~/Home/studentboende" style="text-align:left">Studentboende</a><br />
+                        </div>
+                <div class="link2">
                     <a class="link" href="~/Home/seriorboende" style="text-align:left">Seniorboende 55+</a><br />
                 </div>
+                  
             </div>
         </div>
                 </div>
