--- a/design/design/Views/Home/Intresseanmalan2.cshtml
+++ b/design/design/Views/Home/Intresseanmalan2.cshtml
@@ -27,7 +27,7 @@
                 </div>
 
                 <div class="falt">
-                    <label>Antal barn: </label>
+                    <label>Antal barn: *</label>
                     <div class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
                         <input name="deltagareinput" placeholder="Antal barn" class="form-control input-md" type="number">
@@ -51,7 +51,7 @@
                 </div>
 
                 <div class="falt">
-                    <label>Postort:</label>
+                    <label>Postort: *</label>
                     <div class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
                         <input name="state" placeholder="Postort" class="form-control" type="text">
@@ -67,7 +67,7 @@
                 </div>
 
                 <div class="falt">
-                    <label>Alternativt telefonnummer:</label>
+                    <label>Alternativt telefonnummer: *</label>
                     <div class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span>
                         <input name="state" placeholder="Telefonnummer" class="form-control" type="text">
@@ -75,7 +75,7 @@
                 </div>
 
                 <div class="falt">
-                    <label>E-postadress:</label>
+                    <label>E-postadress: *</label>
                     <div class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
                         <input name="state" placeholder="E-postdress" class="form-control" type="text">
@@ -83,12 +83,12 @@
                 </div>
 
                 <div class="falt">
-                    <label>Yrke: *</label>
-                    <div class="input-group">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-briefcase"></i></span>
-                        <input name="state" placeholder="Yrke" class="form-control" type="text">
-                    </div>
-                </div>
+                    <label>Yrke/Arbetsgivare: * <i class="glyphicon glyphicon-question-sign"></i></label> 
+    <div class="input-group">
+        <span class="input-group-addon"><i class="glyphicon glyphicon-briefcase"></i></span>
+        <input name="state" placeholder="Yrke/Arbetsgivare" class="form-control" type="text">
+    </div>
+</div>
 
                 <div class="falt">
                     <label>Årsinkomst: *</label>
@@ -98,19 +98,13 @@
                     </div>
                 </div>
 
-                <div class="falt">
-                    <label>Arbetsgivare: *</label>
-                    <div class="input-group">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-briefcase"></i></span>
-                        <input name="state" placeholder="Arbetsgivare" class="form-control" type="text">
-                    </div>
-                </div>
+              
 
                 <div class="falt">
                     <label>Egna ord:</label>
                     <div class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
-                        <textarea class="form-control" name="comment" placeholder="Meddelande"></textarea>
+                        <textarea class="form-control" name="comment" placeholder="Max 500 tecken"></textarea>
                     </div>
                 </div>
                 <br />
@@ -140,7 +134,7 @@
                     </div>
 
                     <div class="falt">
-                        <label>Antal barn: </label>
+                        <label>Antal barn: *</label>
                         <div class="input-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
                             <input name="deltagareinput" placeholder="Antal barn" class="form-control input-md" type="number">
@@ -164,7 +158,7 @@
                     </div>
 
                     <div class="falt">
-                        <label>Postort:</label>
+                        <label>Postort: *</label>
                         <div class="input-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
                             <input name="state" placeholder="Postort" class="form-control" type="text">
@@ -180,7 +174,7 @@
                     </div>
 
                     <div class="falt">
-                        <label>Alternativt telefonnummer:</label>
+                        <label>Alternativt telefonnummer: *</label>
                         <div class="input-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span>
                             <input name="state" placeholder="Telefonnummer" class="form-control" type="text">
@@ -188,7 +182,7 @@
                     </div>
 
                     <div class="falt">
-                        <label>E-postadress:</label>
+                        <label>E-postadress: *</label>
                         <div class="input-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
                             <input name="state" placeholder="E-postdress" class="form-control" type="text">
@@ -196,10 +190,10 @@
                     </div>
 
                     <div class="falt">
-                        <label>Yrke: *</label>
+                        <label>Yrke/Arbetsgivare: * <i class="glyphicon glyphicon-question-sign"></i></label>
                         <div class="input-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-briefcase"></i></span>
-                            <input name="state" placeholder="Yrke" class="form-control" type="text">
+                            <input name="state" placeholder="Yrke/Arbetsgivare" class="form-control" type="text">
                         </div>
                     </div>
 
@@ -211,13 +205,7 @@
                         </div>
                     </div>
 
-                    <div class="falt">
-                        <label>Arbetsgivare: *</label>
-                        <div class="input-group">
-                            <span class="input-group-addon"><i class="glyphicon glyphicon-briefcase"></i></span>
-                            <input name="state" placeholder="Arbetsgivare" class="form-control" type="text">
-                        </div>
-                    </div>
+               
                 </div>
 
                 <br />
