--- a/design/design/Views/Home/Varafastigheter.cshtml
+++ b/design/design/Views/Home/Varafastigheter.cshtml
@@ -35,7 +35,7 @@
                         
                             <div id="imaginary_container" style="width:200px;">
                                 <div class="input-group stylish-input-group">
-                                    <input type="text" class="form-control" placeholder="Search">
+                                    <input type="text" class="form-control" placeholder="Sök">
                                     <span class="input-group-addon">
                                         <button type="submit">
                                             <span class="glyphicon glyphicon-search"></span>
